[gd_scene load_steps=15 format=3 uid="uid://c6vmqwoxc4lq7"]

[ext_resource type="Texture2D" uid="uid://cqqs3gh48f34i" path="res://textures/GUI/paper.png" id="1_b67tq"]
[ext_resource type="Theme" uid="uid://0eahjdxywxxa" path="res://sources/menu_theme.tres" id="1_tv8sx"]
[ext_resource type="Script" path="res://scripts/game_ui.gd" id="2_3iju2"]
[ext_resource type="Texture2D" uid="uid://cv43fc7ns0rx1" path="res://textures/GUI/info_board.png" id="3_djhjv"]
[ext_resource type="Texture2D" uid="uid://c4mmfdf2vp0w1" path="res://textures/GUI/button_normal.png" id="4_if20c"]
[ext_resource type="Texture2D" uid="uid://3y4lv2wjbwmo" path="res://textures/GUI/button_pressed.png" id="5_c75lg"]
[ext_resource type="Texture2D" uid="uid://dyriaprwl3nit" path="res://textures/GUI/button_disabled.png" id="6_ade8y"]
[ext_resource type="Texture2D" uid="uid://d26t3h32ryjqw" path="res://textures/GUI/small_button_normal.png" id="8_hmy6w"]
[ext_resource type="Texture2D" uid="uid://b27sosc83miuh" path="res://textures/GUI/small_button_pressed.png" id="9_3eqxq"]
[ext_resource type="Texture2D" uid="uid://dp55286jqoq3r" path="res://textures/GUI/small_button_disabled.png" id="10_04itq"]
[ext_resource type="Texture2D" uid="uid://b5s0aox0188wv" path="res://textures/GUI/HELP.png" id="11_8vkkw"]
[ext_resource type="Texture2D" uid="uid://bu0d3wgr411gk" path="res://textures/GUI/pause.png" id="11_mg5tu"]
[ext_resource type="Texture2D" uid="uid://dgtxqi53nsl8s" path="res://textures/GUI/home.png" id="12_55swo"]
[ext_resource type="Texture2D" uid="uid://cwct773wkp8t7" path="res://textures/GUI/game_menu.png" id="14_ngx8a"]

[node name="GameUI" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_tv8sx")
script = ExtResource("2_3iju2")

[node name="GameInfo" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 300.0
offset_top = 30.0
offset_right = 750.0
offset_bottom = 190.0
texture = ExtResource("1_b67tq")

[node name="TimerLabel" type="Label" parent="GameInfo"]
layout_mode = 0
offset_left = 15.0
offset_top = 15.0
offset_right = 435.0
offset_bottom = 80.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 36
vertical_alignment = 1

[node name="CrownLabel" type="Label" parent="GameInfo"]
layout_mode = 0
offset_left = 15.0
offset_top = 80.0
offset_right = 435.0
offset_bottom = 145.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 36
vertical_alignment = 1

[node name="EntityInfo" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 1300.0
offset_top = 30.0
offset_right = 1900.0
offset_bottom = 366.0
texture = ExtResource("3_djhjv")

[node name="Label" type="Label" parent="EntityInfo"]
layout_mode = 0
offset_left = 70.0
offset_top = 70.0
offset_right = 530.0
offset_bottom = 280.0
theme_override_font_sizes/font_size = 36
autowrap_mode = 2

[node name="EntityButtons" type="Control" parent="."]
process_mode = 1
anchors_preset = 0
offset_left = 1080.0
offset_top = 58.0
offset_right = 1280.0
offset_bottom = 338.0

[node name="UpgradeButton" type="TextureButton" parent="EntityButtons"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 80.0
texture_normal = ExtResource("4_if20c")
texture_pressed = ExtResource("5_c75lg")
texture_disabled = ExtResource("6_ade8y")
stretch_mode = 0
metadata/action = 1

[node name="Label" type="Label" parent="EntityButtons/UpgradeButton"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 70.0
theme_override_font_sizes/font_size = 30
text = "Улучшить"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SellButton" type="TextureButton" parent="EntityButtons"]
layout_mode = 0
offset_top = 100.0
offset_right = 200.0
offset_bottom = 180.0
texture_normal = ExtResource("4_if20c")
texture_pressed = ExtResource("5_c75lg")
texture_disabled = ExtResource("6_ade8y")
stretch_mode = 0
metadata/action = 2

[node name="Label" type="Label" parent="EntityButtons/SellButton"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 70.0
theme_override_font_sizes/font_size = 30
text = "Продать"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestButton" type="TextureButton" parent="EntityButtons"]
layout_mode = 0
offset_top = 200.0
offset_right = 200.0
offset_bottom = 280.0
texture_normal = ExtResource("4_if20c")
texture_pressed = ExtResource("5_c75lg")
texture_disabled = ExtResource("6_ade8y")
stretch_mode = 0
metadata/action = 3

[node name="Label" type="Label" parent="EntityButtons/RestButton"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 70.0
theme_override_font_sizes/font_size = 30
text = "Усыпить"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpawnButtons" type="Control" parent="."]
process_mode = 1
anchors_preset = 0
offset_left = 20.0
offset_top = 30.0
offset_right = 270.0
offset_bottom = 480.0

[node name="SmallButtons" type="Control" parent="."]
process_mode = 1
layout_mode = 3
anchors_preset = 0
offset_left = 1610.0
offset_top = 380.0
offset_right = 1890.0
offset_bottom = 460.0

[node name="PauseBtn" type="TextureButton" parent="SmallButtons"]
layout_mode = 0
offset_right = 80.0
offset_bottom = 80.0
texture_normal = ExtResource("8_hmy6w")
texture_pressed = ExtResource("9_3eqxq")
texture_disabled = ExtResource("10_04itq")
stretch_mode = 0
metadata/click_action = 3

[node name="Icon" type="TextureRect" parent="SmallButtons/PauseBtn"]
layout_mode = 0
offset_left = 5.0
offset_right = 75.0
offset_bottom = 70.0
texture = ExtResource("11_mg5tu")

[node name="MenuBtn" type="TextureButton" parent="SmallButtons"]
layout_mode = 0
offset_left = 100.0
offset_right = 180.0
offset_bottom = 80.0
texture_normal = ExtResource("8_hmy6w")
texture_pressed = ExtResource("9_3eqxq")
texture_disabled = ExtResource("10_04itq")
stretch_mode = 0
metadata/click_action = 4

[node name="Icon" type="TextureRect" parent="SmallButtons/MenuBtn"]
layout_mode = 0
offset_left = 5.0
offset_right = 75.0
offset_bottom = 70.0
texture = ExtResource("12_55swo")

[node name="HelpBtn" type="TextureButton" parent="SmallButtons"]
layout_mode = 0
offset_left = 200.0
offset_right = 280.0
offset_bottom = 80.0
texture_normal = ExtResource("8_hmy6w")
texture_pressed = ExtResource("9_3eqxq")
texture_disabled = ExtResource("10_04itq")
stretch_mode = 0
metadata/click_action = 4

[node name="Icon" type="TextureRect" parent="SmallButtons/HelpBtn"]
layout_mode = 0
offset_left = 5.0
offset_right = 75.0
offset_bottom = 70.0
texture = ExtResource("11_8vkkw")

[node name="GameMenu" type="TextureRect" parent="."]
process_mode = 3
visible = false
z_index = 10
layout_mode = 0
offset_left = 685.0
offset_top = 190.0
offset_right = 1235.0
offset_bottom = 890.0
texture = ExtResource("14_ngx8a")

[node name="Shading" type="ColorRect" parent="GameMenu"]
show_behind_parent = true
layout_mode = 0
offset_left = -685.0
offset_top = -190.0
offset_right = 1235.0
offset_bottom = 890.0
color = Color(0, 0, 0, 0.54902)

[node name="Title" type="Label" parent="GameMenu"]
layout_mode = 0
offset_right = 550.0
offset_bottom = 100.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "ПАУЗА"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Buttons" type="VBoxContainer" parent="GameMenu"]
layout_mode = 0
offset_top = 150.0
offset_right = 550.0
offset_bottom = 580.0

[node name="ResumeButton" type="TextureButton" parent="GameMenu/Buttons"]
custom_minimum_size = Vector2(350, 90)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
texture_normal = ExtResource("4_if20c")
texture_pressed = ExtResource("5_c75lg")
texture_disabled = ExtResource("6_ade8y")
stretch_mode = 0
metadata/action = 1

[node name="Label" type="Label" parent="GameMenu/Buttons/ResumeButton"]
layout_mode = 0
offset_right = 350.0
offset_bottom = 90.0
theme_override_font_sizes/font_size = 30
text = "Продолжить"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SaveButton" type="TextureButton" parent="GameMenu/Buttons"]
custom_minimum_size = Vector2(350, 90)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
texture_normal = ExtResource("4_if20c")
texture_pressed = ExtResource("5_c75lg")
texture_disabled = ExtResource("6_ade8y")
stretch_mode = 0
metadata/action = 1

[node name="Label" type="Label" parent="GameMenu/Buttons/SaveButton"]
layout_mode = 0
offset_right = 350.0
offset_bottom = 90.0
theme_override_font_sizes/font_size = 30
text = "Сохранить"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExitButton" type="TextureButton" parent="GameMenu/Buttons"]
custom_minimum_size = Vector2(350, 90)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
texture_normal = ExtResource("4_if20c")
texture_pressed = ExtResource("5_c75lg")
texture_disabled = ExtResource("6_ade8y")
stretch_mode = 0
metadata/action = 2

[node name="Label" type="Label" parent="GameMenu/Buttons/ExitButton"]
layout_mode = 0
offset_right = 350.0
offset_bottom = 90.0
theme_override_font_sizes/font_size = 30
text = "Выйти в меню"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CloseButton" type="TextureButton" parent="GameMenu/Buttons"]
custom_minimum_size = Vector2(350, 90)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
texture_normal = ExtResource("4_if20c")
texture_pressed = ExtResource("5_c75lg")
texture_disabled = ExtResource("6_ade8y")
stretch_mode = 0
metadata/action = 3

[node name="Label" type="Label" parent="GameMenu/Buttons/CloseButton"]
layout_mode = 0
offset_right = 350.0
offset_bottom = 90.0
theme_override_font_sizes/font_size = 30
text = "Выйти из игры"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="button_down" from="EntityButtons/SellButton" to="." method="_on_btn_down" binds= [&"EntityButtons/SellButton"]]
[connection signal="button_up" from="EntityButtons/SellButton" to="." method="_on_btn_up" binds= [&"EntityButtons/SellButton"]]
[connection signal="button_down" from="EntityButtons/RestButton" to="." method="_on_btn_down" binds= [&"EntityButtons/RestButton"]]
[connection signal="button_up" from="EntityButtons/RestButton" to="." method="_on_btn_up" binds= [&"EntityButtons/RestButton"]]
[connection signal="button_down" from="SmallButtons/PauseBtn" to="." method="_on_btn_down" binds= ["SmallButtons/PauseBtn"]]
[connection signal="button_up" from="SmallButtons/PauseBtn" to="." method="_on_btn_up" binds= ["SmallButtons/PauseBtn"]]
[connection signal="button_down" from="SmallButtons/MenuBtn" to="." method="_on_btn_down" binds= ["SmallButtons/MenuBtn"]]
[connection signal="button_up" from="SmallButtons/MenuBtn" to="." method="_on_btn_up" binds= ["SmallButtons/MenuBtn"]]
[connection signal="button_down" from="SmallButtons/HelpBtn" to="." method="_on_btn_down" binds= ["SmallButtons/HelpBtn"]]
[connection signal="button_up" from="SmallButtons/HelpBtn" to="." method="_on_btn_up" binds= ["SmallButtons/HelpBtn"]]
